// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> Snapshots should match with default input 1`] = `
.c2 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c2:focus {
  color: #231B22;
}

.c2:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c2:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 700;
  color: #231B22;
}

.c2:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2::placeholder {
  color: #6B6B78;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c1 {
  position: relative;
  margin: 0;
  padding: 0;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover,
.c1:focus-within {
  border-color: #231B22;
}

.c4 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      label="Label"
    >
      <input
        class="c2"
        value=""
      />
      <label
        class="c3"
      >
        Label
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Label
        </span>
      </legend>
      
    </fieldset>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with disabled input 1`] = `
<<<<<<< HEAD
.c1 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
  border-color: #F5F5FA;
  color: #F5F5FA;
}

.c1 {
  width: 320px;
}

.c1 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c1 svg:hover,
.c1 svg:focus {
  fill: #231B22;
}

.c1:focus-within legend {
  max-width: 1000px;
  font-weight: 700;
}

.c1:hover fieldset,
.c1:focus-within fieldset {
  border-color: #231B22;
  border-color: #F5F5FA;
}

.c1 svg {
  fill: #F5F5FA;
  pointer-events: none;
}

.c1 fieldset {
  border-color: #F5F5FA;
}

=======
>>>>>>> origin/alpha
.c2 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
<<<<<<< HEAD
  color: #231B22;
  border: none;
=======
  color: #41414A;
>>>>>>> origin/alpha
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c2:focus {
  color: #231B22;
}

.c2:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c2:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 700;
  color: #231B22;
}

.c2:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2::placeholder {
  color: #6B6B78;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c1 {
  position: relative;
  margin: 0;
<<<<<<< HEAD
  pointer-events: none;
  border-radius: 8px;
  border: 1px solid #D7D7E0;
=======
  padding: 0;
  width: 320px;
  height: 52px;
>>>>>>> origin/alpha
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D3D3E2;
}

.c1:hover,
.c1:focus-within {
  border-color: #41414A;
  border-color: #D3D3E2;
}

.c4 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
<<<<<<< HEAD
  color: #6B6B78;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
=======
  color: #9898A6;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
>>>>>>> origin/alpha
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #F5F5FA;
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      disabled=""
      label="Label"
    >
      <input
        class="c2"
        disabled=""
        value=""
      />
      <label
        class="c3"
        disabled=""
      >
        Label
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Label
        </span>
      </legend>
      
    </fieldset>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with error 1`] = `
<<<<<<< HEAD
.c1 {
  position: relative;
  display: inline-block;
  vertical-align: top;
  height: 52px;
  border-color: #FF874C;
}

.c1 {
  width: 320px;
}

.c1 fieldset {
  border-color: #FF874C;
}

.c1 svg {
  position: absolute;
  top: 0;
  right: 0;
  padding-right: 16px;
  padding-left: 8px;
  height: 52px;
  width: 20px;
  fill: #6B6B78;
  outline: none;
  box-sizing: content-box;
  cursor: pointer;
}

.c1 svg:hover,
.c1 svg:focus {
  fill: #231B22;
}

.c1:focus-within legend {
  max-width: 1000px;
  font-weight: 700;
}

.c1:hover fieldset,
.c1:focus-within fieldset {
  border-color: #FF874C;
}

=======
>>>>>>> origin/alpha
.c2 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
<<<<<<< HEAD
  color: #231B22;
  border: none;
=======
  color: #41414A;
>>>>>>> origin/alpha
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c2:focus {
  color: #231B22;
}

.c2:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c2:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 700;
  color: #FF874C;
}

.c2:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2::placeholder {
  color: #6B6B78;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 4px;
  color: #CB3530;
}

.c7 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #41414A;
  color: #9898A6;
  font-size: 12px;
}

.c1 {
  position: relative;
  margin: 0;
<<<<<<< HEAD
  pointer-events: none;
  border-radius: 8px;
  border: 1px solid #D7D7E0;
=======
  padding: 0;
  width: 320px;
  height: 52px;
>>>>>>> origin/alpha
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #CB3530;
}

.c1:hover,
.c1:focus-within {
  border-color: #CB3530;
}

.c4 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
<<<<<<< HEAD
  color: #6B6B78;
  -webkit-transform: translateY(-40%);
  -ms-transform: translateY(-40%);
  transform: translateY(-40%);
=======
  color: #9898A6;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
>>>>>>> origin/alpha
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  color: #FF874C;
}

<<<<<<< HEAD
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 4px;
  color: #FF874C;
}

.c8 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
  font-size: 12px;
}

=======
>>>>>>> origin/alpha
.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      label="Label"
    >
      <input
        class="c2"
        value=""
      />
      <label
        class="c3"
      >
        Label
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Label
        </span>
      </legend>
      
    </fieldset>
    <div
      class="c6"
    >
      <span
        class="c7"
      >
        Error message
      </span>
    </div>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with full width 1`] = `
.c2 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c2:focus {
  color: #231B22;
}

.c2:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c2:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 700;
  color: #231B22;
}

.c2:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2::placeholder {
  color: #6B6B78;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c1 {
  position: relative;
  margin: 0;
  padding: 0;
  width: 100%;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover,
.c1:focus-within {
  border-color: #231B22;
}

.c4 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      label="Label"
    >
      <input
        class="c2"
        value=""
      />
      <label
        class="c3"
      >
        Label
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Label
        </span>
      </legend>
      
    </fieldset>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with helper text and max length 1`] = `
.c2 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c2:focus {
  color: #231B22;
}

.c2:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c2:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 700;
  color: #231B22;
}

.c2:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2::placeholder {
  color: #6B6B78;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 4px;
}

.c7 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
  font-size: 12px;
}

.c8 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  font-weight: 400;
  font-family: Rubik;
  color: #231B22;
  color: #6B6B78;
  font-size: 12px;
  margin-left: auto;
}

.c1 {
  position: relative;
  margin: 0;
  padding: 0;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover,
.c1:focus-within {
  border-color: #231B22;
}

.c4 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      label="Label"
    >
      <input
        class="c2"
        maxlength="20"
        value=""
      />
      <label
        class="c3"
      >
        Label
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Label
        </span>
      </legend>
      
    </fieldset>
    <div
      class="c6"
    >
      <span
        class="c7"
      >
        Helper text
      </span>
      <span
        class="c8"
      >
        0
        /
        20
      </span>
    </div>
  </div>
</div>
`;

exports[`<Input /> Snapshots should match with label 1`] = `
.c2 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: transparent;
  outline: none;
  position: absolute;
  bottom: 0;
  left: 0;
  border: none;
  box-sizing: border-box;
  height: 52px;
  padding-top: 16px;
  padding-right: 40px;
  padding-bottom: 16px;
  padding-left: 16px;
  color: #231B22;
  font-family: Rubik,sans-serif;
  font-size: 14px;
  font-weight: 400;
}

.c2:focus {
  color: #231B22;
}

.c2:focus ~ legend {
  max-width: 1000px;
  padding: 0 2px;
}

.c2:focus ~ label {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  font-size: 12px;
  font-weight: 700;
  color: #231B22;
}

.c2:disabled {
  cursor: not-allowed;
  color: #F5F5FA;
}

.c2::-webkit-input-placeholder {
  color: #6B6B78;
}

.c2::-moz-placeholder {
  color: #6B6B78;
}

.c2:-ms-input-placeholder {
  color: #6B6B78;
}

.c2::placeholder {
  color: #6B6B78;
}

.c2[type="number"]::-webkit-outer-spin-button,
.c2[type="number"]::-webkit-inner-spin-button {
  display: none;
}

.c2:invalid {
  box-shadow: none;
}

.c1 {
  position: relative;
  margin: 0;
  padding: 0;
  width: 320px;
  height: 52px;
  padding-left: 12px;
  border-radius: 8px;
  border-width: 1px;
  border-style: solid;
  border-color: #D7D7E0;
}

.c1:hover,
.c1:focus-within {
  border-color: #231B22;
}

.c4 {
  position: relative;
  padding: 0;
  max-width: 0;
  width: auto;
  height: 0;
  font-weight: normal;
  visibility: hidden;
  font-size: 12px;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c5 {
  padding-left: 4px;
  padding-right: 4px;
}

.c3 {
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  pointer-events: none;
  position: absolute;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
  left: 16px;
  font-size: 14px;
  font-weight: 400;
  color: #6B6B78;
  -webkit-transition-property: -webkit-transform,font-size;
  -webkit-transition-property: transform,font-size;
  transition-property: transform,font-size;
  -webkit-transition-duration: 500ms;
  transition-duration: 500ms;
  -webkit-transition-timing-function: cubic-bezier(0,0.75,0.1,1);
  transition-timing-function: cubic-bezier(0,0.75,0.1,1);
}

.c0 {
  box-sizing: border-box;
  width: 320px;
}

<div>
  <div
    class="c0"
  >
    <fieldset
      class="c1"
      label="Input"
    >
      <input
        class="c2"
        value=""
      />
      <label
        class="c3"
      >
        Input
      </label>
      <legend
        class="c4"
      >
        <span
          class="c5"
        >
          Input
        </span>
      </legend>
      
    </fieldset>
  </div>
</div>
`;
